{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 174,
  "lineage": "455d3103-9a76-3514-b3a8-e36af41b79a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "webapp-prod-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08f91bef5b8370c9c",
            "public_dns": "ec2-99-81-223-150.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.81.223.150",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver-prod",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-844e0bf7",
            "arn": "arn:aws:ec2:eu-west-1:326211895793:instance/i-0faf664c3b90f5d5e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0faf664c3b90f5d5e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfexperiments",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0268202803180e917",
            "private_dns": "ip-10-0-1-188.eu-west-1.compute.internal",
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-3-250-104-43.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.250.104.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-045925971ff94d496",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0419605a2b5564934"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07160d0c894e956ad",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0419605a2b5564934"
            ]
          },
          "dependencies": [
            "aws_key_pair.webserver-prod-key",
            "aws_security_group.terraform-sg",
            "aws_subnet.webapp-prod-public-1",
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326211895793:internet-gateway/igw-021c7e2baa365f487",
            "id": "igw-021c7e2baa365f487",
            "owner_id": "326211895793",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-09395b6b201a976ac"
          },
          "dependencies": [
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "webapp-prod-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f91bef5b8370c9c",
            "id": "nat-08941fa411eabce96",
            "network_interface_id": "eni-0ca95a5f49b187ff1",
            "private_ip": "10.0.1.155",
            "public_ip": "99.81.223.150",
            "subnet_id": "subnet-07160d0c894e956ad"
          },
          "dependencies": [
            "aws_eip.webapp-prod-nat",
            "aws_internet_gateway.main-gw",
            "aws_subnet.webapp-prod-public-1",
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp-prod-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fde58e65b2aa8f23",
            "owner_id": "326211895793",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08941fa411eabce96",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-prod-private-1"
            },
            "vpc_id": "vpc-09395b6b201a976ac"
          },
          "dependencies": [
            "aws_eip.webapp-prod-nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.webapp-prod-nat-gw",
            "aws_subnet.webapp-prod-public-1",
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp-prod-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0043180ba79a5f130",
            "owner_id": "326211895793",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021c7e2baa365f487",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-prod-public-1"
            },
            "vpc_id": "vpc-09395b6b201a976ac"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb3aa43fe0bc2fbb",
            "route_table_id": "rtb-0fde58e65b2aa8f23",
            "subnet_id": "subnet-07629ae3a8833feb0"
          },
          "dependencies": [
            "aws_eip.webapp-prod-nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.webapp-prod-nat-gw",
            "aws_route_table.webapp-prod-private",
            "aws_subnet.webapp-prod-private-1",
            "aws_subnet.webapp-prod-public-1",
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9e892a1d3ce1221",
            "route_table_id": "rtb-0043180ba79a5f130",
            "subnet_id": "subnet-07160d0c894e956ad"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.webapp-prod-public",
            "aws_subnet.webapp-prod-public-1",
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326211895793:security-group/sg-0419605a2b5564934",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0419605a2b5564934",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "11.22.33.44/32",
                  "22.33.44.55/32",
                  "33.44.55.66/32"
                ],
                "description": "Rule 1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "44.55.66.77/32"
                ],
                "description": "Rule 2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-sg",
            "name_prefix": null,
            "owner_id": "326211895793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-sg-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-09395b6b201a976ac"
          },
          "dependencies": [
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-prod-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326211895793:subnet/subnet-07629ae3a8833feb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-07629ae3a8833feb0",
            "map_public_ip_on_launch": false,
            "owner_id": "326211895793",
            "tags": {
              "Name": "webapp-prod-private-1"
            },
            "vpc_id": "vpc-09395b6b201a976ac"
          },
          "dependencies": [
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-prod-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326211895793:subnet/subnet-07160d0c894e956ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07160d0c894e956ad",
            "map_public_ip_on_launch": true,
            "owner_id": "326211895793",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-09395b6b201a976ac"
          },
          "dependencies": [
            "aws_vpc.webapp-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp-prod",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326211895793:vpc/vpc-09395b6b201a976ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0542dcd7c4d259d4b",
            "default_route_table_id": "rtb-0d722bf5d789af709",
            "default_security_group_id": "sg-07c541a9a4e8031a1",
            "dhcp_options_id": "dopt-655fab01",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09395b6b201a976ac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d722bf5d789af709",
            "owner_id": "326211895793",
            "tags": {
              "Name": "webapp-prod"
            }
          }
        }
      ]
    }
  ]
}